<resources>
    <string name="app_name">PFM</string>

    <string name="prompt_username">Username</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_first_name">First name</string>
    <string name="prompt_last_name">Last name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_height">Height</string>
    <string name="prompt_length">Length</string>
    <string name="prompt_width">Width</string>
    <string name="prompt_incline">Incline</string>
    <string name="prompt_temperature">Temperature</string>
    <string name="prompt_rigidity">Rigidity</string>
    <string name="prompt_massage">Massage</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirm">Confirm password</string>
    <string name="prompt_code">Code</string>
    <string name="prompt_brand">Brand</string>
    <string name="prompt_type">Type</string>
    <string name="prompt_is_public">Is public</string>
    <string name="prompt_furniture">Furniture</string>
    <string name="prompt_options">Options</string>
    <string name="prompt_default_double_field">0.0</string>

    <string name="action_add_options">Add options</string>
    <string name="action_add_furniture">Add furniture</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_apply">Apply</string>
    <string name="action_discard">Discard</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_desc">Navigation header</string>

    <string name="nav_item_furniture">Furniture</string>
    <string name="nav_item_add_furniture">Add furniture</string>
    <string name="nav_item_options">Furniture options</string>
    <string name="nav_item_add_options">Add furniture optionss</string>
    <string name="nav_item_edit_profile">Edit profile</string>
    <string name="nav_item_logout">Logout</string>
    <string name="nav_item_apply">Apply furniture settings</string>
    <string name="nav_item_discard">Discard furniture settings</string>
    <string name="nav_item_edit_furniture">Edit furniture</string>
    <string name="nav_item_edit_options">Edit options</string>

    <string name="error_field_required">This field is required</string>
    <string name="error_no_furniture">You have no furniture of this type</string>
    <string name="error_no_options">You have no options of this type</string>
    <string name="error_no_curr_furniture">You have no furniture in use</string>
    <string name="error_unknown">An error occurred</string>

    <string name="response_success_profile">Successfully saved profile</string>
    <string name="response_success_furniture">Successfully saved furniture</string>
    <string name="response_success_options">Successfully saved options</string>
    <string name="response_success_delete_options">Successfully deleted options</string>
    <string name="response_success_delete_furniture">Successfully deleted furniture</string>
    <string name="response_fail_server">A server error occurred</string>
</resources>
