<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_furniture"
            android:icon="@drawable/ic_furniture"
            android:title="@string/nav_item_furniture" />
        <item
            android:id="@+id/nav_options"
            android:icon="@drawable/ic_options"
            android:title="@string/nav_item_options" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_edit_profile"
            android:title="@string/nav_item_edit_profile" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/nav_item_logout" />
    </group>
</menu>
